<resources>
    <string name="app_name">FinalProject</string>
    <string name="home">主頁</string>
    <string name="record">紀錄</string>
    <string name="message">留言</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="status">狀態紀錄</string>
    <string name="note">隨手筆記</string>
    <string name="checklist">待辦事項</string>
    <string name="add_note">添加留言</string>
    <string name="choose_date">選擇日期</string>
    <string name="note_dialog_title">標題</string>
    <string name="note_dialog_content">寫點內容八</string>
    <string name="save">儲存</string>
    <string name="add_checklist">添加待辦事項</string>
    <string name="check">待辦事件</string>
    <string name="pill">服藥</string>
    <string name="diagnosis">回診</string>
    <string name="diet">飲食</string>
    <string name="care">照護</string>
    <string name="center">Center</string>
    <string name="line">line</string>
    <string name="location">事件地點</string>
    <string name="event">事件提醒</string>
    <string name="calender">Calender</string>
    <string name="date_set">請選取日期</string>
    <string name="update">更新</string>
    <string name="delete">刪除</string>
    <string name="choose_time">請選擇時間</string>
    <string name="time">Time</string>
    <string name="edit">編輯</string>
    <string name="home_img">Home</string>
    <string name="today">今日待辦事項:</string>
</resources>