<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Record">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button_checklist"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/checklist"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/check"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_note"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_note"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/note"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/note"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_status"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/status"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/status"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/button_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>