<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@color/white"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/dialog_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/textview_border"
        android:hint="@string/note_dialog_title"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_date"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/microphone_btn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:icon="@android:drawable/ic_btn_speak_now"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_title"
        app:layout_constraintTop_toTopOf="@+id/dialog_title"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/dialog_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/textview_border"
        android:hint="@string/note_dialog_content"
        android:inputType="textMultiLine"
        android:maxLines="12"
        android:minHeight="48dp"
        android:minLines="10"
        android:scrollbars="vertical"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/save"
        android:textSize="22sp"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_content"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>